remove item, add docs to reservation & car
